include( CMakeSourceFiles.txt )

add_executable( rigidbody2d_cli ${Headers} ${Sources} )

target_link_libraries( rigidbody2d_cli rigidbody2dutils rigidbody2d )

execute_process( COMMAND ${CMAKE_COMMAND} -E create_symlink ${CMAKE_SOURCE_DIR}/assets/rigidbody2d ${CMAKE_CURRENT_BINARY_DIR}/assets )

# Serialization and resume tests
if( USE_HDF5 )
  add_test( rigidbody2d_serialization_00 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/rotating_circles.xml 3.0 300 177 100 )
  add_test( rigidbody2d_serialization_01 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/rotating_translating_circles.xml 1.0 100 037 100 )
  add_test( rigidbody2d_serialization_02 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/ball_rolling_down_hill.xml 3.0 300 121 100 )
  add_test( rigidbody2d_serialization_03 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/circle_circle_0.xml 1.5 150 098 100 )
  add_test( rigidbody2d_serialization_04 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/circle_circle_1.xml 1.5 150 098 100 )
  add_test( rigidbody2d_serialization_05 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/circle_circle_2.xml 1.5 150 098 100 )
  add_test( rigidbody2d_serialization_06 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/circle_circle_3.xml 1.5 150 098 100 )
  add_test( rigidbody2d_serialization_07 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/circle_circle_4.xml 1.5 150 098 100 )
  add_test( rigidbody2d_serialization_08 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/circle_circle_5.xml 1.5 150 098 100 )
  add_test( rigidbody2d_serialization_09 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/circle_circle_6.xml 2.0 200 131 100 )
  add_test( rigidbody2d_serialization_10 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/circle_circle_7.xml 1.5 150 098 100 )
  add_test( rigidbody2d_serialization_11 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/circle_circle_8.xml 1.5 150 098 100 )
  add_test( rigidbody2d_serialization_12 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/forty_five_plane_collision.xml 1.5 150 098 100 )
  add_test( rigidbody2d_serialization_13 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/horizontal_no_initial_rotation_0.xml 1.5 150 098 100 )
  add_test( rigidbody2d_serialization_14 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/horizontal_no_initial_rotation_1.xml 1.5 150 098 100 )
  add_test( rigidbody2d_serialization_15 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/horizontal_plane_collision.xml 1.5 150 098 100 )
  add_test( rigidbody2d_serialization_16 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/vertical_plane_collision.xml 1.5 150 098 100 )
  add_test( rigidbody2d_serialization_17 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/vertical_no_horizontal_with_rotation_0.xml 1.5 150 098 100 )
  add_test( rigidbody2d_serialization_18 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/vertical_no_horizontal_with_rotation_1.xml 1.5 150 098 100 )
  add_test( rigidbody2d_serialization_19 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/portal_lots_of_collisions.xml 10.0 1000 0374 100 )
else()
  message( STATUS "Skipping RigidBody2D tests that require HDF5 (USE_HDF5 is disabled)." )
endif()

# Serialization tests for simulations that use Ipopt
if( USE_HDF5 AND USE_IPOPT )
  add_test( rigidbody2d_ipopt_serialization_00 assets/shell_scripts/execute_serialization_test.sh assets/tests_ipopt_serialization/balls_in_box.xml 10.0 1000 0547 100 )
  add_test( rigidbody2d_ipopt_serialization_01 assets/shell_scripts/execute_serialization_test.sh assets/tests_ipopt_serialization/horizontal_plane_collision.xml 2.5 250 097 100 )
  add_test( rigidbody2d_ipopt_serialization_02 assets/shell_scripts/execute_serialization_test.sh assets/tests_ipopt_serialization/circle_circle_0.xml 1.5 150 077 100 )
  add_test( rigidbody2d_ipopt_serialization_03 assets/shell_scripts/execute_serialization_test.sh assets/tests_ipopt_serialization/circle_circle_1.xml 1.5 150 077 100 )
  add_test( rigidbody2d_ipopt_serialization_04 assets/shell_scripts/execute_serialization_test.sh assets/tests_ipopt_serialization/circle_circle_2.xml 1.5 150 092 100 )
  add_test( rigidbody2d_ipopt_serialization_05 assets/shell_scripts/execute_serialization_test.sh assets/tests_ipopt_serialization/circle_circle_3.xml 1.5 150 092 100 )
  add_test( rigidbody2d_ipopt_serialization_06 assets/shell_scripts/execute_serialization_test.sh assets/tests_ipopt_serialization/vertical_plane_collision.xml 2.5 250 097 100 )
else()
  message( STATUS "Skipping RigidBody2D tests that require Ipopt and HDF5 (USE_IPOPT or USE_HDF5 is disabled)." )
endif()
