include( CMakeSourceFiles.txt )

add_executable( rigidbody2d_cli ${Headers} ${Sources} )

target_link_libraries( rigidbody2d_cli rigidbody2dutils rigidbody2d )

execute_process( COMMAND ${CMAKE_COMMAND} -E create_symlink ${CMAKE_SOURCE_DIR}/assets/rigidbody2d ${CMAKE_CURRENT_BINARY_DIR}/assets )

# Serialization and resume tests
if( USE_HDF5 )
  add_test( rigidbody2d_serialization_00 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/rotating_circles.xml 3.0 300 177 100 )
  add_test( rigidbody2d_serialization_01 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/rotating_translating_circles.xml 1.0 100 037 100 )
  add_test( rigidbody2d_serialization_02 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/ball_rolling_down_hill.xml 3.0 300 121 100 )
  add_test( rigidbody2d_serialization_03 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/circle_circle_0.xml 1.5 150 098 100 )
  add_test( rigidbody2d_serialization_04 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/circle_circle_1.xml 1.5 150 098 100 )
  add_test( rigidbody2d_serialization_05 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/circle_circle_2.xml 1.5 150 098 100 )
  add_test( rigidbody2d_serialization_06 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/circle_circle_3.xml 1.5 150 098 100 )
  add_test( rigidbody2d_serialization_07 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/circle_circle_4.xml 1.5 150 098 100 )
  add_test( rigidbody2d_serialization_08 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/circle_circle_5.xml 1.5 150 098 100 )
  add_test( rigidbody2d_serialization_09 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/circle_circle_6.xml 2.0 200 131 100 )
  add_test( rigidbody2d_serialization_10 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/circle_circle_7.xml 1.5 150 098 100 )
  add_test( rigidbody2d_serialization_11 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/circle_circle_8.xml 1.5 150 098 100 )
  add_test( rigidbody2d_serialization_12 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/forty_five_plane_collision.xml 1.5 150 098 100 )
  add_test( rigidbody2d_serialization_13 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/horizontal_no_initial_rotation_0.xml 1.5 150 098 100 )
  add_test( rigidbody2d_serialization_14 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/horizontal_no_initial_rotation_1.xml 1.5 150 098 100 )
  add_test( rigidbody2d_serialization_15 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/horizontal_plane_collision.xml 1.5 150 098 100 )
  add_test( rigidbody2d_serialization_16 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/vertical_plane_collision.xml 1.5 150 098 100 )
  add_test( rigidbody2d_serialization_17 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/vertical_no_horizontal_with_rotation_0.xml 1.5 150 098 100 )
  add_test( rigidbody2d_serialization_18 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/vertical_no_horizontal_with_rotation_1.xml 1.5 150 098 100 )
  add_test( rigidbody2d_serialization_19 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/portal_lots_of_collisions.xml 10.0 1000 0374 100 )
  # Stabilized map tests
  add_test( rigidbody2d_serialization_20 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/drift_safe_ball_on_plane.xml 4.5 45 22 10 )
  add_test( rigidbody2d_serialization_21 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/drift_safe_balls_on_planes_00.xml 2.7 27 10 10 )
  add_test( rigidbody2d_serialization_22 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/drift_safe_balls_on_planes_01.xml 1.7 17 05 10 )
  add_test( rigidbody2d_serialization_23 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/drift_safe_circle_circle_00.xml 2.0 20 11 10 )
  # Lees-Edwards boundary conditions tests
  add_test( rigidbody2d_serialization_24 assets/shell_scripts/execute_serialization_test.sh assets/lees_edwards/balls_collide_in_portal_test_00.xml 1.0 50 20 50 )
  add_test( rigidbody2d_serialization_25 assets/shell_scripts/execute_serialization_test.sh assets/lees_edwards/balls_collide_in_portal_test_01.xml 4.5 45 35 10 )
  add_test( rigidbody2d_serialization_26 assets/shell_scripts/execute_serialization_test.sh assets/lees_edwards/balls_collide_in_portal_test_02.xml 4.5 45 35 10 )
  add_test( rigidbody2d_serialization_27 assets/shell_scripts/execute_serialization_test.sh assets/lees_edwards/balls_collide_in_portal_test_03.xml 1.0 50 20 50 )
  add_test( rigidbody2d_serialization_28 assets/shell_scripts/execute_serialization_test.sh assets/lees_edwards/portal_collision_00.xml 4.0 40 25 10 )
  add_test( rigidbody2d_serialization_29 assets/shell_scripts/execute_serialization_test.sh assets/lees_edwards/portal_collision_01.xml 2.0 20 10 10 )
  add_test( rigidbody2d_serialization_30 assets/shell_scripts/execute_serialization_test.sh assets/lees_edwards/portal_lots_of_collisions.xml 10.0 100 050 10 )
  # Serialization tests with fixed bodies
  add_test( rb2d_serialization_fixed_00 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/fixed_body_0.xml 2.0 20 07 10 )
  add_test( rb2d_serialization_fixed_01 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/fixed_body_1.xml 2.0 20 07 10 )
  add_test( rb2d_serialization_fixed_02 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/fixed_body_2.xml 1.2 12 06 10 )
  add_test( rb2d_serialization_fixed_03 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/fixed_body_3.xml 1.5 15 06 10 )
  add_test( rb2d_serialization_fixed_04 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/fixed_body_4.xml 3.0 30 06 10 )
  add_test( rb2d_serialization_fixed_05 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/fixed_body_5.xml 6.0 60 30 10 )
  add_test( rb2d_serialization_fixed_06 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/fixed_body_6.xml 4.0 40 06 10 )
  add_test( rb2d_serialization_fixed_07 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/fixed_body_7.xml 10.0 10 03 1 )
  # Box-box tests
  add_test( rb2d_serialization_box_box_00 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/boxes/box_box_00.xml 1.5 15 04 10 )
  add_test( rb2d_serialization_box_box_01 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/boxes/box_box_01.xml 1.5 15 04 10 )
  add_test( rb2d_serialization_box_box_02 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/boxes/box_box_02.xml 0.5 5 2 10 )
  add_test( rb2d_serialization_box_box_03 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/boxes/box_box_03.xml 4.0 40 15 10 )
  # Box-plane tests
  add_test( rb2d_serialization_box_plane_00 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/boxes/box_plane_00.xml 2.0 20 11 10 )
  add_test( rb2d_serialization_box_plane_01 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/boxes/box_plane_01.xml 3.5 35 07 10 )
  add_test( rb2d_serialization_box_plane_02 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/boxes/box_plane_02.xml 2.0 20 06 10 )
  add_test( rb2d_serialization_box_plane_03 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/boxes/box_plane_03.xml 4.5 45 08 10 )
  add_test( rb2d_serialization_box_plane_04 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/boxes/box_plane_04.xml 6.0 60 25 10 )
  # Box-box-plane tests
  add_test( rb2d_serialization_box_box_plane_00 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/boxes/box_box_plane_00.xml 3.5 35 06 10 )
  add_test( rb2d_serialization_box_box_plane_01 assets/shell_scripts/execute_serialization_test.sh assets/tests_serialization/boxes/box_box_plane_01.xml 2.0 20 06 10 )
  # Friction tests for box-plane
  add_test( rb2d_friction_box_static_00 assets/shell_scripts/static_particle_test.sh assets/tests_serialization/boxes/box_slide_flat_plane.xml 2.0 10  )
  add_test( rb2d_friction_box_static_01 assets/shell_scripts/static_particle_test.sh assets/tests_serialization/boxes/box_slide_below_threshold.xml 2.0 10  )
  add_test( rb2d_friction_box_static_02 assets/shell_scripts/static_particle_test.sh assets/tests_serialization/boxes/box_slide_at_threshold.xml 2.0 10  )
  add_test( rb2d_friction_box_sliding_00 assets/shell_scripts/sliding_particle_test.sh assets/tests_serialization/boxes/box_slide_above_threshold.xml 2.0 10 )
else()
  message( STATUS "Skipping RigidBody2D tests that require HDF5 (USE_HDF5 is disabled)." )
endif()

# Serialization tests for simulations that use Ipopt
if( USE_HDF5 AND USE_IPOPT )
  add_test( rigidbody2d_ipopt_serialization_00 assets/shell_scripts/execute_serialization_test.sh assets/tests_ipopt_serialization/balls_in_box.xml 10.0 1000 0547 100 )
  add_test( rigidbody2d_ipopt_serialization_01 assets/shell_scripts/execute_serialization_test.sh assets/tests_ipopt_serialization/horizontal_plane_collision.xml 2.5 250 097 100 )
  add_test( rigidbody2d_ipopt_serialization_02 assets/shell_scripts/execute_serialization_test.sh assets/tests_ipopt_serialization/circle_circle_0.xml 1.5 150 077 100 )
  add_test( rigidbody2d_ipopt_serialization_03 assets/shell_scripts/execute_serialization_test.sh assets/tests_ipopt_serialization/circle_circle_1.xml 1.5 150 077 100 )
  add_test( rigidbody2d_ipopt_serialization_04 assets/shell_scripts/execute_serialization_test.sh assets/tests_ipopt_serialization/circle_circle_2.xml 1.5 150 092 100 )
  add_test( rigidbody2d_ipopt_serialization_05 assets/shell_scripts/execute_serialization_test.sh assets/tests_ipopt_serialization/circle_circle_3.xml 1.5 150 092 100 )
  add_test( rigidbody2d_ipopt_serialization_06 assets/shell_scripts/execute_serialization_test.sh assets/tests_ipopt_serialization/vertical_plane_collision.xml 2.5 250 097 100 )
else()
  message( STATUS "Skipping RigidBody2D tests that require Ipopt and HDF5 (USE_IPOPT or USE_HDF5 is disabled)." )
endif()
